--- a/chemistry/Base.lproj/Main.storyboard
+++ b/chemistry/Base.lproj/Main.storyboard
@@ -1063,6 +1063,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Purple shit" translatesAutoresizingMaskIntoConstraints="NO" id="Ajl-1S-p7o">
+                                <rect key="frame" x="580" y="480" width="207" height="220"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="Ab8-V0-hSN"/>
+                                    <constraint firstAttribute="width" constant="207" id="d9J-gM-AXK"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dd7-El-UMJ">
                                 <rect key="frame" x="399.5" y="40" width="567" height="108"/>
                                 <color key="backgroundColor" red="0.94902807474136353" green="0.9568524956703186" blue="0.95686334371566772" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -1097,13 +1104,6 @@
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fSt-PE-kkJ">
-                                <rect key="frame" x="823" y="104" width="119" height="47"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esJ-tW-c3s">
                                 <rect key="frame" x="1216" y="40" width="80" height="80"/>
@@ -1523,16 +1523,6 @@
                                     <constraint firstAttribute="width" constant="157" id="c0R-cl-o7a"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Purple shit" translatesAutoresizingMaskIntoConstraints="NO" id="Ajl-1S-p7o">
-                                <rect key="frame" x="580" y="480" width="207" height="220"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="220" id="Ab8-V0-hSN"/>
-                                    <constraint firstAttribute="width" constant="207" id="d9J-gM-AXK"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="42j-T0-wr6">
-                                <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
-                            </imageView>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tab1" translatesAutoresizingMaskIntoConstraints="NO" id="hqT-Jj-YzC">
                                 <rect key="frame" x="631" y="486" width="105" height="72"/>
                                 <gestureRecognizers/>
@@ -1544,6 +1534,9 @@
                                     <outletCollection property="gestureRecognizers" destination="ixD-WH-oR7" appends="YES" id="lxE-80-SMH"/>
                                 </connections>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="42j-T0-wr6">
+                                <rect key="frame" x="1" y="20" width="1365" height="1004"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.97239416837692261" green="0.99330049753189087" blue="0.90194743871688843" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <gestureRecognizers/>
@@ -1551,7 +1544,6 @@
                             <constraint firstItem="42j-T0-wr6" firstAttribute="trailing" secondItem="rkb-lx-ZTN" secondAttribute="trailing" id="5ki-n4-5Ho"/>
                             <constraint firstItem="t3l-Kj-Nph" firstAttribute="top" secondItem="rkb-lx-ZTN" secondAttribute="top" constant="40" id="6j3-84-qbK"/>
                             <constraint firstItem="Ajl-1S-p7o" firstAttribute="centerX" secondItem="rkb-lx-ZTN" secondAttribute="centerX" id="7cg-Bv-7is"/>
-                            <constraint firstItem="42j-T0-wr6" firstAttribute="top" secondItem="PPe-S9-ME7" secondAttribute="top" id="LAA-jM-lXZ"/>
                             <constraint firstItem="dd7-El-UMJ" firstAttribute="top" secondItem="rkb-lx-ZTN" secondAttribute="top" constant="20" id="Ndl-8G-sje"/>
                             <constraint firstItem="rkb-lx-ZTN" firstAttribute="bottom" secondItem="OPi-ko-a8Y" secondAttribute="bottom" constant="28" id="SUo-6k-j1O"/>
                             <constraint firstItem="Kqp-47-yN4" firstAttribute="centerX" secondItem="PPe-S9-ME7" secondAttribute="centerX" id="TgI-rH-DRU"/>
@@ -1565,8 +1557,9 @@
                             <constraint firstItem="rkb-lx-ZTN" firstAttribute="trailing" secondItem="esJ-tW-c3s" secondAttribute="trailing" constant="70" id="ivo-Kl-rN9"/>
                             <constraint firstItem="Kqp-47-yN4" firstAttribute="top" secondItem="Ajl-1S-p7o" secondAttribute="bottom" constant="8" id="mIo-sn-jbn"/>
                             <constraint firstItem="esJ-tW-c3s" firstAttribute="top" secondItem="PPe-S9-ME7" secondAttribute="top" constant="40" id="mZl-nR-GIP"/>
+                            <constraint firstItem="42j-T0-wr6" firstAttribute="centerY" secondItem="rkb-lx-ZTN" secondAttribute="centerY" id="na7-AC-ipc"/>
                             <constraint firstItem="hqT-Jj-YzC" firstAttribute="top" secondItem="O18-XT-RcU" secondAttribute="bottom" constant="8" id="odb-23-KxV"/>
-                            <constraint firstItem="42j-T0-wr6" firstAttribute="leading" secondItem="rkb-lx-ZTN" secondAttribute="leading" id="uL4-9X-GdU"/>
+                            <constraint firstItem="42j-T0-wr6" firstAttribute="centerX" secondItem="rkb-lx-ZTN" secondAttribute="centerX" id="rA3-G0-P1N"/>
                             <constraint firstItem="hqT-Jj-YzC" firstAttribute="centerY" secondItem="rkb-lx-ZTN" secondAttribute="centerY" id="y9u-Jl-Vu7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rkb-lx-ZTN"/>
@@ -1684,6 +1677,6 @@
         <image name="Zinc" width="600" height="600"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lgc-jb-9H8"/>
+        <segue reference="32K-DG-Wi6"/>
     </inferredMetricsTieBreakers>
 </document>
